used: adsense code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/portlogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- ads  -->
+   <meta name="google-adsense-account" content="ca-pub-5359470003990537">
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5359470003990537"
+     crossorigin="anonymous"></script>
   <title>Md Akther Hosen</title>
+
 </head>
 
 <body>
